Update MC and VSCode Config

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -121,4 +121,6 @@
         "overview",
         "gutter"
     ],
+    "markdown-preview-enhanced.previewColorScheme": "systemColorScheme",
+    "markdown-preview-enhanced.codeBlockTheme": "github.css",
   }
