--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -123,4 +123,5 @@
     ],
     "markdown-preview-enhanced.previewColorScheme": "systemColorScheme",
     "markdown-preview-enhanced.codeBlockTheme": "github.css",
+    "git.autofetch": true,
   }
